--- a/.github/workflows/shared-release.yml
+++ b/.github/workflows/shared-release.yml
@@ -60,13 +60,18 @@ jobs:
         
       - name: Smart Version Bump
         id: version
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           # Get current version
           CURRENT_VERSION=$(node -p "require('./package.json').version")
           PACKAGE_NAME="${{ inputs.package-name }}"
           
+          echo "Current version in package.json: ${CURRENT_VERSION}"
+          
           # Check if already published
           PUBLISHED_VERSION=$(npm view ${PACKAGE_NAME} version 2>/dev/null || echo "0.0.0")
+          echo "Published version in registry: ${PUBLISHED_VERSION}"
           
           # Also check if current version is already tagged
           if git rev-parse "v${CURRENT_VERSION}" >/dev/null 2>&1; then
@@ -74,6 +79,7 @@ jobs:
             echo "version=${CURRENT_VERSION}" >> $GITHUB_OUTPUT
             echo "changed=false" >> $GITHUB_OUTPUT
           elif [ "$PUBLISHED_VERSION" = "$CURRENT_VERSION" ]; then
+            echo "Version ${CURRENT_VERSION} is already published"
             # Need to bump version
             git config user.name "github-actions[bot]"
             git config user.email "github-actions[bot]@users.noreply.github.com"
