fix: rename workflow job to avoid redundant display
Changed job name from 'release-package' to 'process' to avoid redundant 'release / release' display in GitHub Actions UI

--- a/.github/workflows/shared-release.yml
+++ b/.github/workflows/shared-release.yml
@@ -24,7 +24,7 @@ on:
         description: 'NPM token for publishing to npm registry'
 
 jobs:
-  release-package:
+  process:
     runs-on: ubuntu-latest
     permissions:
       contents: write
